# rag-pipline

./: .gitignore  main.py  pyproject.toml
app/: config.py  main.py
app/db/: connection.py  models.py
app/llm/: deepseek_api.py
app/rag_pipline/: encoder.py  reranker.py  vector_store.py
app/utils/: chunker.py  download_models.py  model_load.py  prompts.py
data/txt_files/: chat_001_ru.txt  chat_002_en.txt  chat_003_en.txt  chat_004_ru.txt  chat_005_uz.txt  chat_006_uz.txt  chat_007_ru.txt  chat_008_ru.txt  chat_009_ru.txt  chat_010_uz.txt  chat_011_uz.txt  chat_012_en.txt  chat_013_ru.txt  chat_014_en.txt  chat_015_uz.txt  chat_016_uz.txt  chat_017_uz.txt  chat_018_uz.txt  chat_019_en.txt  chat_020_uz.txt  chat_021_en.txt  chat_022_ru.txt  chat_023_en.txt  chat_024_en.txt  chat_025_uz.txt  chat_026_ru.txt  chat_027_ru.txt  chat_028_ru.txt  chat_029_uz.txt  chat_030_uz.txt  chat_031_en.txt  chat_032_ru.txt  chat_033_uz.txt  chat_034_uz.txt  chat_035_uz.txt  chat_036_uz.txt  chat_037_uz.txt  chat_038_en.txt  chat_039_ru.txt  chat_040_uz.txt  (+460 more)
